# panel-trials

./: .gitignore  Makefile.am  autogen.sh  configure.ac
data/: soma-panel.css  soma-panel.glade
icons/: Makefile.am
soma/: Makefile.am  soma-panel-css.h  soma-panel-ui.h  soma-panel.c  soma-panel.h
src/: Makefile.am  main.c
